Fixed data type for ResourceSets (long in IDL is an int in Java, a java long is a long long in IDL) Xalan is needed for common to build properly

--- a/src/AUTHORS
+++ b/src/AUTHORS
@@ -1,8 +1,8 @@
 Maintainer
    Kimbro Staken <kstaken@xmldatabases.org>
 
-Contributers
+Contributors
    Lars Martin <Lars.Martin@smb-tec.com>
-   Per Nyfelt <per.nyfelt@nordicwave.com>
+   Per Nyfelt <per.nyfelt@resourcing.se>
    Vladimir R. Bossicard <vladimir@apache.org>
    Jeroen Breedveld <jeroenb@x-hive.com>
