--- a/README.adoc
+++ b/README.adoc
@@ -3,7 +3,7 @@ Patrick Reinhart <https://github.com/reinhapa[@reinhapa]>
 :project-full-path: xmldb-org/xmldb-api
 :github-branch: master
 
-image:https://img.shields.io/badge/license-MIT-blue.svg["MIT License", link="https://github.com/{project-full-path}/blob/{github-branch}/LICENSE"]
+image:https://img.shields.io/badge/license-XML:DB-blue.svg["XML:DB Initiative Software License", link="https://github.com/{project-full-path}/blob/{github-branch}/LICENSE"]
 image:https://img.shields.io/badge/Java-8-blue.svg["Java 8", link="https://travis-ci.org/{project-full-path}"]
 image:https://img.shields.io/badge/Java-11-blue.svg["Java 11", link="https://travis-ci.org/{project-full-path}"]
 image:https://img.shields.io/github/release/{project-full-path}.svg["Release", link="https://github.com/{project-full-path}"]
