Fixes typo in license

--- a/README.adoc
+++ b/README.adoc
@@ -47,4 +47,4 @@ Contributions are always welcome.
 
 
 == License
-This project is licensed under the https://github.com/{project-full-path}/blob/{github-branch}/LICENSE[MIT license]
+This project is licensed under the https://github.com/{project-full-path}/blob/{github-branch}/LICENSE[XML:DB Software license]
