--- a/README.adoc
+++ b/README.adoc
@@ -5,11 +5,10 @@ Patrick Reinhart <https://github.com/reinhapa[@reinhapa]>
 
 image:https://img.shields.io/badge/license-XML:DB-blue.svg["XML:DB Initiative Software License", link="https://github.com/{project-full-path}/blob/{github-branch}/LICENSE"]
 image:https://img.shields.io/badge/Java-8-blue.svg["Java 8", link="https://travis-ci.org/{project-full-path}"]
-image:https://img.shields.io/badge/Java-9-blue.svg["Java 9", link="https://travis-ci.org/{project-full-path}"]
-image:https://img.shields.io/badge/Java-10-blue.svg["Java 10", link="https://travis-ci.org/{project-full-path}"]
 image:https://img.shields.io/badge/Java-11-blue.svg["Java 11", link="https://travis-ci.org/{project-full-path}"]
+image:https://img.shields.io/badge/Java-15-blue.svg["Java 15", link="https://travis-ci.org/{project-full-path}"]
 image:https://img.shields.io/github/release/{project-full-path}.svg["Release", link="https://github.com/{project-full-path}/releases"]
-image:https://img.shields.io/travis/{project-full-path}/{github-branch}.svg["Build Status", link="https://travis-ci.org/{project-full-path}"]
+image:https://github.com/{project-full-path}/workflows/CI/badge.svg["Java CI with Gradle", link="https://github.com/{project-full-path}/actions?query=workflow%3A%22CI%22"]
 
 This is a conversion to Git of the `xapi` module from the XML:DB CVS repositiory
 via `anonymous@a.cvs.sourceforge.net:/cvsroot/xmldb-org`.
