--- a/README.adoc
+++ b/README.adoc
@@ -8,7 +8,7 @@ image:https://img.shields.io/badge/Java-8-blue.svg["Java 8", link="https://travi
 image:https://img.shields.io/badge/Java-11-blue.svg["Java 11", link="https://travis-ci.org/{project-full-path}"]
 image:https://img.shields.io/badge/Java-15-blue.svg["Java 15", link="https://travis-ci.org/{project-full-path}"]
 image:https://img.shields.io/github/release/{project-full-path}.svg["Release", link="https://github.com/{project-full-path}/releases"]
-image:https://github.com/{project-full-path}/workflows/CI/badge.svg["Java CI with Gradle", link="https://github.com/{project-full-path}/actions?query=workflow%3A%22CI%22"]
+image:https://github.com/{project-full-path}/workflows/CI/badge.svg["Java CI with Gradle", link="https://github.com/{project-full-path}/actions?query=workflow%3ACI"]
 
 This is a conversion to Git of the `xapi` module from the XML:DB CVS repositiory
 via `anonymous@a.cvs.sourceforge.net:/cvsroot/xmldb-org`.
