--- a/README.adoc
+++ b/README.adoc
@@ -1,14 +1,17 @@
 = XML:DB Initiative for XML Databases
 Patrick Reinhart <https://github.com/reinhapa[@reinhapa]>
-:project-full-path: xmldb-org/xmldb-api
+:group-name: net.sf.xmldb-org
+:project-name: xmldb-api
+:project-full-path: xmldb-org/{project-name}
 :github-branch: master
 
 image:https://img.shields.io/badge/license-XML:DB-blue.svg["XML:DB Initiative Software License", link="https://github.com/{project-full-path}/blob/{github-branch}/LICENSE"]
-image:https://img.shields.io/badge/Java-8-blue.svg["Java 8", link="https://travis-ci.org/{project-full-path}"]
-image:https://img.shields.io/badge/Java-11-blue.svg["Java 11", link="https://travis-ci.org/{project-full-path}"]
-image:https://img.shields.io/badge/Java-17-blue.svg["Java 17", link="https://travis-ci.org/{project-full-path}"]
+image:https://img.shields.io/badge/Java-8-blue.svg["Java 8", link="https://adoptium.net/"]
+image:https://img.shields.io/badge/Java-11-blue.svg["Java 11", link="https://adoptium.net/"]
+image:https://img.shields.io/badge/Java-17-blue.svg["Java 17", link="https://adoptium.net/"]
 image:https://img.shields.io/github/release/{project-full-path}.svg["Release", link="https://github.com/{project-full-path}/releases"]
-image:https://github.com/{project-full-path}/workflows/CI/badge.svg["Java CI with Gradle", link="https://github.com/{project-full-path}/actions?query=workflow%3ACI"]
+image:https://javadoc.io/badge2/{group-name}/{project-name}/javadoc.svg["javadoc", link="https://javadoc.io/doc/{group-name}/{project-name}"]
+image:https://github.com/{project-full-path}/actions/workflows/gradle.yml/badge.svg["CI", link="https://github.com/{project-full-path}/actions/workflows/gradle.yml"]
 
 This is a conversion to Git of the `xapi` module from the XML:DB CVS repositiory
 via `anonymous@a.cvs.sourceforge.net:/cvsroot/xmldb-org`.
