--- a/README.adoc
+++ b/README.adoc
@@ -11,6 +11,7 @@ image:https://img.shields.io/badge/Java-8-blue.svg["Java 8", link="https://adopt
 image:https://img.shields.io/badge/Java-11-blue.svg["Java 11", link="https://adoptium.net/"]
 image:https://img.shields.io/badge/Java-17-blue.svg["Java 17", link="https://adoptium.net/"]
 image:https://img.shields.io/github/release/{project-full-path}.svg["Release", link="https://github.com/{project-full-path}/releases"]
+image:https://img.shields.io/maven-central/v/{group-name}/{project-name}.svg?label=Maven%20Central["Maven Central", link="https://search.maven.org/search?q=g:%22{group-name}%22%20AND%20a:%22{project-name}%22"]
 image:https://sonarcloud.io/api/project_badges/measure?project={project-org}_{project-name}&metric=alert_status["Quality Gate Status", link ="https://sonarcloud.io/summary/new_code?id={project-org}_{project-name}"]
 image:https://javadoc.io/badge2/{group-name}/{project-name}/javadoc.svg["javadoc", link="https://javadoc.io/doc/{group-name}/{project-name}"]
 image:https://github.com/{project-full-path}/actions/workflows/gradle.yml/badge.svg["CI", link="https://github.com/{project-full-path}/actions/workflows/gradle.yml"]
