--- a/README.adoc
+++ b/README.adoc
@@ -7,20 +7,22 @@ Patrick Reinhart <https://github.com/reinhapa[@reinhapa]>
 :github-branch: master
 
 image:https://img.shields.io/badge/license-XML:DB-blue.svg["XML:DB Initiative Software License", link="https://github.com/{project-full-path}/blob/{github-branch}/LICENSE"]
-image:https://img.shields.io/badge/Java-8-blue.svg["Java 8", link="https://adoptium.net/"]
-image:https://img.shields.io/badge/Java-11-blue.svg["Java 11", link="https://adoptium.net/"]
-image:https://img.shields.io/badge/Java-17-blue.svg["Java 17", link="https://adoptium.net/"]
 image:https://img.shields.io/github/release/{project-full-path}.svg["Release", link="https://github.com/{project-full-path}/releases"]
 image:https://img.shields.io/maven-central/v/{group-name}/{project-name}.svg?label=Maven%20Central["Maven Central", link="https://search.maven.org/search?q=g:%22{group-name}%22%20AND%20a:%22{project-name}%22"]
 image:https://sonarcloud.io/api/project_badges/measure?project={project-org}_{project-name}&metric=alert_status["Quality Gate Status", link ="https://sonarcloud.io/summary/new_code?id={project-org}_{project-name}"]
 image:https://javadoc.io/badge2/{group-name}/{project-name}/javadoc.svg["javadoc", link="https://javadoc.io/doc/{group-name}/{project-name}"]
 image:https://github.com/{project-full-path}/actions/workflows/gradle.yml/badge.svg["CI", link="https://github.com/{project-full-path}/actions/workflows/gradle.yml"]
 
+
 This is a conversion to Git of the `xapi` module from the XML:DB CVS repositiory
 via `anonymous@a.cvs.sourceforge.net:/cvsroot/xmldb-org`.
 
 The archived project and code can be found at https://sourceforge.net/projects/xmldb-org/
 
+Supported Java versions: 
+image:https://img.shields.io/badge/Java-8-blue.svg["Java 8", link="https://adoptium.net/"]
+image:https://img.shields.io/badge/Java-11-blue.svg["Java 11", link="https://adoptium.net/"]
+image:https://img.shields.io/badge/Java-17-blue.svg["Java 17", link="https://adoptium.net/"]
 
 == Content
 The API interfaces are what driver developers must implement when creating a
